--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -151,7 +151,7 @@ Animation
 }
 .teaser:hover {
   transform: scale(1.02) !important;
-  box-shadow: 0px 0px 10px #d6d6d6;
+  box-shadow: 0px 0px 10px #d8d8d8;
 }
 .teaser:hover:after {
   width: 100%;
@@ -159,6 +159,7 @@ Animation
 .teaser .image-container {
   position: relative;
   width: 100%;
+  max-height: 240px;
   height: auto;
   overflow: hidden;
 }
@@ -307,7 +308,7 @@ Animation
   width: 160px;
   float: right;
   padding: 0.6em 0;
-  border-top: 3px solid #d6d6d6;
+  border-top: 3px solid #d8d8d8;
   transition: 0.3s;
   cursor: pointer;
 }
@@ -550,11 +551,13 @@ figure.open-up figcaption {
   position: absolute;
   top: 0;
   color: white;
+  padding: 0.5em 1em;
+  background-color: #252525;
   cursor: pointer;
   z-index: 21;
 }
 .photo-gallery-container .grid-icon:hover {
-  color: #097ABB;
+  background-color: #097ABB;
 }
 .photo-gallery-container .grid-icon i {
   margin-right: 0.3em;
