--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -32,6 +32,7 @@
   .image-container{
     position: relative;
     width: 100%;
+    max-height: 240px;
     height: auto;
     overflow: hidden;
     img{
