--- a/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
@@ -108,9 +108,11 @@
     top: 0;
     color: white;
     cursor: pointer;
+    padding: 0.5em 1em;
+    background-color: #252525;
     z-index: 21;
     &:hover{
-      color: $bpnBlue;
+      background-color: $bpnBlue;
     }
     i{
       margin-right: 0.3em;
